--- a/src/components/Routes/Home/Header/Header.sass
+++ b/src/components/Routes/Home/Header/Header.sass
@@ -94,7 +94,7 @@
         background: none
 
         a
-          letter-spacing: 0.2em
+          // letter-spacing: 0.2em
           font-size: 0.9em
           font-weight: 100
           max-height: 50px
@@ -178,12 +178,12 @@
             background-color: #CDA036
             a
               font-weight: 400
-              letter-spacing: 0.5em
+              // letter-spacing: 0.5em 
                 font-size: 1.1em
           a
             color: #fff
             font-size: 1em
-            letter-spacing: 0.2em
+            // letter-spacing: 0.2em
             font-weight: 200
     .button-collapse
       margin-top: -8px
