--- a/src/components/Reusable/Navbar/Navbar.sass
+++ b/src/components/Reusable/Navbar/Navbar.sass
@@ -52,12 +52,12 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
           background-color: $main-cayan-gold
           a
             font-weight: 400
-            letter-spacing: 0.5em
+            // letter-spacing: 0.5em
             font-size: 1.1em
         a
           color: #fff
           font-size: 1em
-          letter-spacing: 0.2em
+          // letter-spacing: 0.2em
           font-weight: 200
     .nav-links
       margin: auto
@@ -73,7 +73,7 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
         margin: 2px
         a
           color: #222222
-          letter-spacing: 0.2em
+          // letter-spacing: 0.2em
           font-size: 0.9em
           font-weight: 300
           max-height: 50px
@@ -182,9 +182,9 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
       a
         font-family: 'Montserrat', sans-serif !important
         font-weight: 100
-        letter-spacing: 0.1em
+        // letter-spacing: 0.1em
         font-size: 0.9em
-        
+
         &.selected
           font-size: 1em
           font-weight: 500
